# PromptPipe

./: .env.example  .gitignore  AGENTS.md  CRITICAL_FIXES_APPLIED.md  LICENSE  MIGRATION_STRATEGY.md  Makefile  PERSISTENCE_REVIEW.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  docs.md  go.mod  go.sum  main.go
.jules/: atlas.md
docker/: Dockerfile
docs/: api.md  auto-enrollment-feature.md  auto-enrollment-migration-guide.md  beginner-guide.md  button-to-poll-migration.md  changeset-2025-08-13.md  cleanup-report.md  codebase-cleanup-report.md  configuration.md  conversation-api-examples.md  conversation-flow-architecture.md  conversation-flow-comprehensive.md  conversation-flow.md  conversation.md  debug-mode.md  development.md  docs_drift_report.md  flows.md  intensity-adjustment-feature.md  intervention-api.md  onboarding.md  (+10 more)
python/langchain/: .env.example  .gitignore  DEPLOYMENT.md  INTEGRATION.md  MIGRATION_SUMMARY.md  README.md  pyproject.toml
python/langchain/promptpipe_agent/: config.py
python/langchain/promptpipe_agent/agents/: coordinator_agent.py  feedback_agent.py  intake_agent.py  orchestrator.py
python/langchain/promptpipe_agent/api/: main.py
python/langchain/promptpipe_agent/models/: schemas.py  state_manager.py
python/langchain/promptpipe_agent/tools/: profile_save_tool.py  prompt_generator_tool.py  scheduler_tool.py  state_transition_tool.py
python/langchain/scripts/: run_server.py
python/langchain/tests/integration/: test_conversation_flow.py
python/langchain/tests/unit/: test_models.py  test_state_manager.py  test_tools.py
(+169 files in other folders)
